--- a/styles/formations/F343.module.css
+++ b/styles/formations/F343.module.css
@@ -1,13 +1,14 @@
 .teamsheet{
     display: grid;
     margin: auto;
-    margin-top: 120px;
-    margin-left: 16px;
-    width: 380px;
-    height: 500px;
+    margin-top: 80px;
+    margin-left: 20px;
+    width: 450px;
+    height: 580px;
+    align-items: center;
     justify-content: center;
     grid-template-columns: 50px 50px 50px 50px 50px;
-    grid-template-rows: auto auto auto 150px;
+    grid-template-rows: auto auto auto 60px;
     grid-template-areas: 
     " first . second . third "
     " fourth fifth . sixth seventh"
@@ -64,5 +65,4 @@
 #eleventh{
     grid-area: eleventh;
     margin-top: 50px;
-    background-color: aliceblue;
 }
