--- a/styles/formations/F4231.module.css
+++ b/styles/formations/F4231.module.css
@@ -2,12 +2,12 @@
     display: grid;
     margin: auto;
     margin-top: 80px;
-    margin-left: 16px;
-    width: 380px;
-    height: 500px;
+    margin-left: 20px;
+    width: 450px;
+    height: 580px;
     justify-content: center;
     grid-template-columns: 50px 50px 50px 50px 50px;
-    grid-template-rows: auto auto auto auto 80px;
+    grid-template-rows: auto auto auto auto 60px;
     grid-template-areas: 
     ". . first . ."
     " second . third . fourth "
@@ -46,6 +46,7 @@
 #seventh{
     grid-area: seventh;
     margin-left: -50px;
+    margin-top: -20px;
 }
 
 #eight{
@@ -59,10 +60,10 @@
 #tenth{
     grid-area: tenth;
     margin-left: 50px;
+    margin-top: -20px;
 }
 
 #eleventh{
     grid-area: eleventh;
     margin-top: 20px;
-    background-color: aliceblue;
 }
